2008-05-20  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors-config/src/ipmi-sensors-config.c
	(_ipmi_sensors_config): Fix flush corner case.

2008-05-20  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/, ipmipower/: Remove hostname config-file option.
	Require users to always input atleast the hostname.

	* common/src/, ipmi-sel/, ipmi-fru/, ipmi-sensors/,
	ipmimonitoring/, ipmi-sensors-config/: Remove useless
	sdr_cache_dir_wanted flag.

	* common/src/tool-cmdline-common.c (verify_sdr_cmd_args,
	sdr_parse_opt): Move sdr cache dir check into verify checks.

	* common/src/tool-cmdline-common.c,
	common/src/tool-cmdline-common.h: Replace common_cmd_args 'flags'
	with 'debug' flag.

	* common/src/tool-cmdline-common.c: Adjust for above change.

	* Adjust all tools for use of logical debug flag.
	
2008-05-19  Albert Chu <chu11@llnl.gov>

	* Make all argp docs/version/naming consistent.  Make description
	consistent between tool and manpages.

	* common/src: Rename config lib to config-tool lib, to
	differentiate from config file lib later on.

2008-05-19  Albert Chu <chu11@llnl.gov>

	* common/src/tool-cmdline-common.h,
	common/src/tool-cmdline-common.c: Fix option ordering.  Fix
	--timeout legacy support.  Support outofband only driver type
	parsing.

	* ipmipower/src/: Use common parsing code not internal parsing
	code.  Use common parsing args.  More code cleanup.

	* bmc-config/src/bmc-config-argp.h: Remove extraneous headers.

	* common/src/config-argp.h, common/src/config-argp.c: New files.

	* bmc-config/, pef-config/, ipmi-sensors-config/: Use common
	config argp parsing and verfication.

2008-05-18  Albert Chu <chu11@llnl.gov>
	
	* ipmipower/: More code cleanup.

2008-05-17  Albert Chu <chu11@llnl.gov>

	* ipmipower/: More code cleanup.

	* README, doc/freeipmi.7.pre.in: Note Linux SSIF driver.
	
2008-05-16  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/: Fix --eliminate option.  Use common
	ipmi_disable_coredump.
	
2008-05-16  Albert Chu <chu11@llnl.gov>
